--- a/package.json
+++ b/package.json
@@ -9,17 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.18",
+    "@prisma/client": "^5.7.0",
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "20.9.4",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.16",
+    "axios": "^1.6.5",
+    "bcrypt": "^5.1.1",
     "eslint": "8.54.0",
     "eslint-config-next": "14.0.3",
     "moment": "^2.29.4",
     "next": "^13.4.9",
+    "next-auth": "^4.24.5",
     "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -28,5 +34,8 @@
     "react-icons": "^4.12.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.3.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.7.0"
   }
 }
